--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<style>
-    body { background: #1a1a1a; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; color: white; font-family: sans-serif; overflow: hidden; }
-    .machine-wrapper { display: flex; align-items: center; gap: 20px; scale: 0.8; }
-    .casino-container { text-align: center; background: #333; padding: 25px; border-radius: 20px; border: 6px solid #ffd700; box-shadow: 0 0 40px rgba(255, 215, 0, 0.2); width: 750px; }
-    .reels { display: flex; gap: 12px; justify-content: center; }
-    .reel-col { display: flex; flex-direction: column; align-items: center; flex: 1; }
-    .reel-title { font-size: 0.95rem; color: #ffd700; margin-bottom: 12px; font-weight: bold; text-transform: uppercase; letter-spacing: 1.5px; text-shadow: 2px 2px 4px #000; }
-    .reel { width: 100%; height: 220px; background: #fff; border-radius: 12px; overflow: hidden; display: flex; justify-content: center; align-items: center; border: 4px solid #222; box-sizing: border-box; box-shadow: inset 0 0 20px rgba(0,0,0,0.15), 0 0 15px rgba(255,255,255,0.4); position: relative; }
-    .reel img { width: 100%; height: 100%; object-fit: contain; padding: 8px; z-index: 1; }
-    #spinBtn { margin-top: 30px; padding: 18px 70px; font-size: 1.6rem; background: #e63946; color: white; border: none; border-radius: 50px; cursor: pointer; box-shadow: 0 6px #900; font-weight: bold; transition: 0.2s; }
-    .lever-container { width: 45px; height: 200px; background: #555; position: relative; border-radius: 8px; }
-    .lever-arm { width: 12px; height: 140px; background: #999; position: absolute; top: 30px; left: 16px; transform-origin: bottom center; transition: 0.3s; border-radius: 6px; }
-    .lever-ball { width: 35px; height: 35px; background: red; border-radius: 50%; position: absolute; top: -30px; left: -11px; box-shadow: inset -5px -5px 10px rgba(0,0,0,0.5); }
-    .lever-active .lever-arm { transform: rotate(150deg); }
-    .spinning { filter: blur(2px); animation: shakeReel 0.1s infinite; }
-    @keyframes shakeReel { 0% { transform: translateY(-1px); } 50% { transform: translateY(1px); } 100% { transform: translateY(-1px); } }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ruleta de Predicación</title>
+    <style>
+        body { background: #1a1a1a; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; color: white; font-family: sans-serif; overflow: hidden; }
+        .machine-wrapper { display: flex; align-items: center; gap: 20px; scale: 0.8; }
+        .casino-container { text-align: center; background: #333; padding: 25px; border-radius: 20px; border: 6px solid #ffd700; box-shadow: 0 0 40px rgba(255, 215, 0, 0.2); width: 750px; }
+        .reels { display: flex; gap: 12px; justify-content: center; }
+        .reel-col { display: flex; flex-direction: column; align-items: center; flex: 1; }
+        .reel-title { font-size: 0.95rem; color: #ffd700; margin-bottom: 12px; font-weight: bold; text-transform: uppercase; letter-spacing: 1.5px; text-shadow: 2px 2px 4px #000; }
+        .reel { width: 100%; height: 220px; background: #fff; border-radius: 12px; overflow: hidden; display: flex; justify-content: center; align-items: center; border: 4px solid #222; box-sizing: border-box; box-shadow: inset 0 0 20px rgba(0,0,0,0.15), 0 0 15px rgba(255,255,255,0.4); position: relative; }
+        .reel img { width: 100%; height: 100%; object-fit: contain; padding: 8px; z-index: 1; }
+        #spinBtn { margin-top: 30px; padding: 18px 70px; font-size: 1.6rem; background: #e63946; color: white; border: none; border-radius: 50px; cursor: pointer; box-shadow: 0 6px #900; font-weight: bold; transition: 0.2s; }
+        #spinBtn:disabled { opacity: 0.6; cursor: not-allowed; }
+        .lever-container { width: 45px; height: 200px; background: #555; position: relative; border-radius: 8px; }
+        .lever-arm { width: 12px; height: 140px; background: #999; position: absolute; top: 30px; left: 16px; transform-origin: bottom center; transition: 0.3s; border-radius: 6px; }
+        .lever-ball { width: 35px; height: 35px; background: red; border-radius: 50%; position: absolute; top: -30px; left: -11px; box-shadow: inset -5px -5px 10px rgba(0,0,0,0.5); }
+        .lever-active .lever-arm { transform: rotate(150deg); }
+        .spinning { filter: blur(2px); animation: shakeReel 0.1s infinite; }
+        @keyframes shakeReel { 0% { transform: translateY(-1px); } 50% { transform: translateY(1px); } 100% { transform: translateY(-1px); } }
+    </style>
 </head>
 <body>
+
 <div class="machine-wrapper">
     <div class="casino-container">
         <div class="reels">
@@ -33,14 +37,17 @@
     </div>
     <div id="lever" class="lever-container"><div class="lever-arm"><div class="lever-ball"></div></div></div>
 </div>
+
 <script>
-    const URL_BASE = "https://cdn.jsdelivr.net/gh/EzequielCodigo/ruleta/Ruleta%20Predicacion/"; 
+    const URL_BASE = "https://cdn.jsdelivr.net/gh/EzequielCodigo/ruleta/"; 
+
     const options = {
         PERSONA: ["Anciana", "Anciano", "Comerciante", "Hombre", "Joven", "Madre", "Mujer", "Niño", "Padre", "Portero Electrico", "una Joven"],
         OBSERVAR: ["Baston", "Cruz", "Desorden", "Jardin", "Juguetes", "Nada", "Profesional", "Rejas"],
         ACTITUD: ["APURADO", "CON VISITAS", "DEBATIDOR", "ENOJADO", "FERVIENTE", "MUCHO INTERÉS", "OCUPADO", "POCO INTERÉS", "RELAJADO", "SOBRADOR"],
         RELIGION: ["AGNÓSTICO", "ATEO", "BUDSTA", "CATÓLICO", "EVANGELÍCO", "EVOLUCIONISTA", "HIPIE", "JUDÍO", "MORMON", "NINGUNA", "Poco religioso", "SANTOS"]
     };
+
     const categorias = Object.keys(options);
     let isSpinning = false;
     let results = ["", "", "", ""];
@@ -77,6 +84,14 @@
                 setTimeout(() => {
                     clearInterval(intervals[i]);
                     let finalVal = options[categorias[i]][Math.floor(Math.random()*options[categorias[i]].length)];
+                    
+                    if (i === 1) { 
+                        if (results[0] === "Portero Electrico" && finalVal === "Jardin") finalVal = "Rejas";
+                        if (results[0] === "Comerciante" && (finalVal === "Jardin" || finalVal === "Desorden")) finalVal = "Profesional";
+                        if ((results[0] === "Anciano" || results[0] === "Anciana") && finalVal === "Juguetes") finalVal = "Baston";
+                    }
+                    if (i === 3 && results[1] === "Cruz") finalVal = "CATÓLICO";
+
                     results[i] = finalVal;
                     reel.classList.remove('spinning');
                     setReelContent(reel, finalVal, categorias[i]);
