--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         .reel { width: 100%; height: 220px; background: #fff; border-radius: 12px; overflow: hidden; display: flex; justify-content: center; align-items: center; border: 4px solid #222; box-sizing: border-box; box-shadow: inset 0 0 20px rgba(0,0,0,0.15), 0 0 15px rgba(255,255,255,0.4); position: relative; }
         .reel img { width: 100%; height: 100%; object-fit: contain; padding: 8px; z-index: 1; }
         #spinBtn { margin-top: 30px; padding: 18px 70px; font-size: 1.6rem; background: #e63946; color: white; border: none; border-radius: 50px; cursor: pointer; box-shadow: 0 6px #900; font-weight: bold; transition: 0.2s; }
+        #spinBtn.reset-mode { background: #888 !important; box-shadow: 0 6px #555 !important; }
         #spinBtn:disabled { opacity: 0.6; cursor: not-allowed; }
         .lever-container { width: 45px; height: 200px; background: #555; position: relative; border-radius: 8px; }
         .lever-arm { width: 12px; height: 140px; background: #999; position: absolute; top: 30px; left: 16px; transform-origin: bottom center; transition: 0.3s; border-radius: 6px; }
@@ -50,6 +51,7 @@
 
     const categorias = Object.keys(options);
     let isSpinning = false;
+    let isResetMode = false;
     let results = ["", "", "", ""];
     let intervals = [null, null, null, null];
     const reels = [document.getElementById('reel1'), document.getElementById('reel2'), document.getElementById('reel3'), document.getElementById('reel4')];
@@ -61,10 +63,23 @@
         reel.innerHTML = `<img src="${URL_BASE}${carpeta}/${file}.png" onerror="this.outerHTML='<span style=\'color:black;font-size:0.6rem\'>${val}</span>'">`;
     }
 
-    const nombresCero = ["PERSONA_CERO", "OBSERVAR_CERO", "ACTITUD_CERO", "RELIGION_CERO"];
-    reels.forEach((reel, i) => setReelContent(reel, nombresCero[i], "CERO"));
+    function resetToZero() {
+        const nombresCero = ["PERSONA_CERO", "OBSERVAR_CERO", "ACTITUD_CERO", "RELIGION_CERO"];
+        reels.forEach((reel, i) => setReelContent(reel, nombresCero[i], "CERO"));
+        btn.innerText = "GIRAR";
+        btn.classList.remove('reset-mode');
+        isResetMode = false;
+    }
+
+    // Inicio por defecto
+    resetToZero();
 
     btn.onclick = () => {
+        if (isResetMode) {
+            resetToZero();
+            return;
+        }
+
         if (!isSpinning) {
             isSpinning = true;
             btn.innerText = "DETENER";
@@ -95,7 +110,13 @@
                     results[i] = finalVal;
                     reel.classList.remove('spinning');
                     setReelContent(reel, finalVal, categorias[i]);
-                    if(i === 3) { btn.innerText = "GIRAR"; btn.disabled = false; }
+                    
+                    if(i === 3) { 
+                        btn.innerText = "REINICIAR"; 
+                        btn.classList.add('reset-mode');
+                        btn.disabled = false; 
+                        isResetMode = true;
+                    }
                 }, i * 500);
             });
         }
