--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 <script>
     const URL_BASE = "https://cdn.jsdelivr.net/gh/EzequielCodigo/ruleta/"; 
 
+    // Se usan los nombres de carpetas tal como podrían estar escritos (PEROSNA, OVSERVAR)
     const options = {
-        PERSONA: ["Anciana", "Anciano", "Comerciante", "Hombre", "Joven", "Madre", "Mujer", "Niño", "Padre", "Portero Electrico", "una Joven"],
-        OBSERVAR: ["Baston", "Cruz", "Desorden", "Jardin", "Juguetes", "Nada", "Profesional", "Rejas"],
+        PEROSNA: ["Anciana", "Anciano", "Comerciante", "Hombre", "Joven", "Madre", "Mujer", "Niño", "Padre", "Portero Electrico", "una Joven"],
+        OVSERVAR: ["Baston", "Cruz", "Desorden", "Jardin", "Juguetes", "Nada", "Profesional", "Rejas"],
         ACTITUD: ["APURADO", "CON VISITAS", "DEBATIDOR", "ENOJADO", "FERVIENTE", "MUCHO INTERÉS", "OCUPADO", "POCO INTERÉS", "RELAJADO", "SOBRADOR"],
         RELIGION: ["AGNÓSTICO", "ATEO", "BUDSTA", "CATÓLICO", "EVANGELÍCO", "EVOLUCIONISTA", "HIPIE", "JUDÍO", "MORMON", "NINGUNA", "Poco religioso", "SANTOS"]
     };
