--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
 <script>
     const URL_BASE = "https://cdn.jsdelivr.net/gh/EzequielCodigo/ruleta/"; 
 
-    // Se usan los nombres de carpetas tal como podrían estar escritos (PEROSNA, OVSERVAR)
     const options = {
-        PEROSNA: ["Anciana", "Anciano", "Comerciante", "Hombre", "Joven", "Madre", "Mujer", "Niño", "Padre", "Portero Electrico", "una Joven"],
-        OVSERVAR: ["Baston", "Cruz", "Desorden", "Jardin", "Juguetes", "Nada", "Profesional", "Rejas"],
+        PERSONAS: ["Anciana", "Anciano", "Comerciante", "Hombre", "Joven", "Madre", "Mujer", "Niño", "Padre", "Portero Electrico", "una Joven"],
+        OBSERVAR: ["Baston", "Cruz", "Desorden", "Jardin", "Juguetes", "Nada", "Profesional", "Rejas"],
         ACTITUD: ["APURADO", "CON VISITAS", "DEBATIDOR", "ENOJADO", "FERVIENTE", "MUCHO INTERÉS", "OCUPADO", "POCO INTERÉS", "RELAJADO", "SOBRADOR"],
         RELIGION: ["AGNÓSTICO", "ATEO", "BUDSTA", "CATÓLICO", "EVANGELÍCO", "EVOLUCIONISTA", "HIPIE", "JUDÍO", "MORMON", "NINGUNA", "Poco religioso", "SANTOS"]
     };
@@ -65,8 +64,10 @@
     }
 
     function resetToZero() {
-        const nombresCero = ["PERSONA_CERO", "OBSERVAR_CERO", "ACTITUD_CERO", "RELIGION_CERO"];
-        reels.forEach((reel, i) => setReelContent(reel, nombresCero[i], "CERO"));
+        setReelContent(reels[0], "PERSONA_CERO", "CERO");
+        setReelContent(reels[1], "OBSERVAR_CERO", "CERO");
+        setReelContent(reels[2], "ACTITUD_CERO", "CERO");
+        setReelContent(reels[3], "RELIGION_CERO", "CERO");
         btn.innerText = "GIRAR";
         btn.classList.remove('reset-mode');
         isResetMode = false;
