--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         .reel-col { display: flex; flex-direction: column; align-items: center; flex: 1; }
         .reel-title { font-size: 0.95rem; color: #ffd700; margin-bottom: 12px; font-weight: bold; text-transform: uppercase; letter-spacing: 1.5px; text-shadow: 2px 2px 4px #000; }
         .reel { width: 100%; height: 220px; background: #fff; border-radius: 12px; overflow: hidden; display: flex; justify-content: center; align-items: center; border: 4px solid #222; box-sizing: border-box; box-shadow: inset 0 0 20px rgba(0,0,0,0.15), 0 0 15px rgba(255,255,255,0.4); position: relative; }
-        .reel img { width: 100%; height: 100%; object-fit: contain; padding: 8px; z-index: 1; }
+        .reel img { width: 100%; height: 100%; object-fit: contain; padding: 8px; z-index: 1; opacity: 1; transition: opacity 0.5s ease-in-out; }
+        .fade-in { animation: fadeInImg 0.5s forwards; }
+        @keyframes fadeInImg { from { opacity: 0; } to { opacity: 1; } }
         #spinBtn { margin-top: 30px; padding: 18px 70px; font-size: 1.6rem; background: #e63946; color: white; border: none; border-radius: 50px; cursor: pointer; box-shadow: 0 6px #900; font-weight: bold; transition: 0.2s; }
         #spinBtn.reset-mode { background: #888 !important; box-shadow: 0 6px #555 !important; }
         #spinBtn:disabled { opacity: 0.6; cursor: not-allowed; }
@@ -58,22 +60,34 @@
     const btn = document.getElementById('spinBtn');
     const lever = document.getElementById('lever');
 
-    function setReelContent(reel, val, carpeta) {
+    function setReelContent(reel, val, carpeta, soft = false) {
         const file = encodeURIComponent(val);
-        reel.innerHTML = `<img src="${URL_BASE}${carpeta}/${file}.png" onerror="this.outerHTML='<span style=\'color:black;font-size:0.6rem\'>${val}</span>'">`;
+        const imgClass = soft ? 'class="fade-in"' : '';
+        reel.innerHTML = `<img src="${URL_BASE}${carpeta}/${file}.png" ${imgClass} onerror="this.outerHTML='<span style=\'color:black;font-size:0.6rem\'>${val}</span>'">`;
     }
 
     function resetToZero() {
-        setReelContent(reels[0], "PERSONA_CERO", "CERO");
-        setReelContent(reels[1], "OBSERVAR_CERO", "CERO");
-        setReelContent(reels[2], "ACTITUD_CERO", "CERO");
-        setReelContent(reels[3], "RELIGION_CERO", "CERO");
-        btn.innerText = "GIRAR";
-        btn.classList.remove('reset-mode');
-        isResetMode = false;
+        btn.disabled = true;
+        reels.forEach(reel => reel.classList.add('spinning'));
+        
+        setTimeout(() => {
+            reels.forEach(reel => reel.classList.remove('spinning'));
+            setReelContent(reels[0], "PERSONA_CERO", "CERO", true);
+            setReelContent(reels[1], "OBSERVAR_CERO", "CERO", true);
+            setReelContent(reels[2], "ACTITUD_CERO", "CERO", true);
+            setReelContent(reels[3], "RELIGION_CERO", "CERO", true);
+            btn.innerText = "GIRAR";
+            btn.classList.remove('reset-mode');
+            isResetMode = false;
+            btn.disabled = false;
+        }, 500);
     }
 
-    resetToZero();
+    // Inicialización inmediata sin efecto
+    setReelContent(reels[0], "PERSONA_CERO", "CERO");
+    setReelContent(reels[1], "OBSERVAR_CERO", "CERO");
+    setReelContent(reels[2], "ACTITUD_CERO", "CERO");
+    setReelContent(reels[3], "RELIGION_CERO", "CERO");
 
     btn.onclick = () => {
         if (isResetMode) { resetToZero(); return; }
